# addressify

./: .gitignore  AGENTS.md  Cargo.toml  DEPLOY.md  ETL.md
data/indexes/cz/: meta.json
db/: 0001_address_matching.sql  0002_api_auth.sql
deploy/: addressify.service.example  addresswise.service.example
scripts/: deploy_production.sh  etl_be_csv.sh  etl_geojson.sh  etl_hu_xlsx.sh  public_benchmark.py
src/: address_rules.rs  auth.rs  http.rs  indexing.rs  lib.rs  main.rs  models.rs  normalize.rs  search.rs
static/: index.html
