[package]
name = "addresswise"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
bytes = "1"
calamine = "0.26"
csv = "1.3.1"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
quinn = "0.11.11"
rcgen = "0.14.8"
rustls = "0.23.41"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
tantivy = "*"
tempfile = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread", "time"] }
url = "2"
xitca-web = { version = "0.8.1", features = ["http2", "http3", "json", "urlencoded"] }
